syntax = "proto3";

package goServerTest;
option go_package = ".;goServerTest";


service SubscriberService {
    rpc ReceivePublication (ReceivePublicationRequest) returns (ReceivePublicationResponse);
}

message ReceivePublicationRequest {
    string id = 1;
    string subject = 2;
    string operator = 3;
    string value = 4;
}

message ReceivePublicationResponse {
    string id = 1;
    string ip = 2;
    string port = 3;
    string message = 4;
}
